# murify

./: CMakeLists.txt  README.md
include/murify/: base64url.hpp  compactor.hpp  interned_string.hpp
include/murify/detail/: detail.hpp  header.hpp  integers.hpp  strings.hpp
test/: murify.cpp
